<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">HMCL-PE</string>
    <string name="app_full_name" translatable="false">Hello Minecraft! Launcher : Pocket Edition</string>
    <string name="app_name_pri" translatable="false">Hello Minecraft! Launcher</string>
    <string name="app_name_sec" translatable="false">Pocket Edition</string>
    <string name="version_name" translatable="false">v1.0.0</string>
    <string name="app_bar_title" translatable="false">Hello Minecraft! Launcher Pocket Edition v1.0.0</string>
    <string name="launcher_spinner_text" translatable="false">▲</string>
    <string name="dialog_add_offline_account_uuid" translatable="false">UUID</string>
    <string name="default_game_file_directory_list_pri_path" translatable="false">/storage/emulated/0/HMCLPE/.minecraft</string>
    <string name="default_game_file_directory_list_sec_path" translatable="false">/storage/emulated/0/Android/data/com.tungsten.hmclpe/files/.minecraft</string>
    <string name="export_package_type_ui_multimc" translatable="false">MultiMC</string>
    <string name="install_game_ui_minecraft" translatable="false">Minecraft</string>
    <string name="install_game_ui_forge" translatable="false">Forge</string>
    <string name="install_game_ui_liteloader" translatable="false">LiteLoader</string>
    <string name="install_game_ui_optifine" translatable="false">OptiFine</string>
    <string name="install_game_ui_fabric" translatable="false">Fabric</string>
    <string name="install_game_ui_fabric_api" translatable="false">Fabric API</string>
    <string name="install_game_ui_quilt" translatable="false">Quilt</string>
    <string name="install_game_ui_quilt_api" translatable="false">Quilt API</string>
    <string name="download_mod_source_curse_forge" translatable="false">CurseForge</string>
    <string name="download_mod_source_modrinth" translatable="false">Modrinth</string>
    <string name="download_resource_mcbbs" translatable="false">MCBBS</string>
    <string name="download_resource_curse_forge" translatable="false">CurseForge</string>
    <string name="download_resource_modrinth" translatable="false">Modrinth</string>
    <string name="game_setting_ui_ram" translatable="false">MB</string>
    <string name="game_setting_ui_game_launcher_boat" translatable="false">Boat</string>
    <string name="game_setting_ui_game_launcher_pojav" translatable="false">PojavLauncher</string>
    <string name="game_setting_ui_boat_renderer_gl4es_114" translatable="false">Holy GL4ES (OpenGL 2.1/3.2)</string>
    <string name="game_setting_ui_boat_renderer_virgl" translatable="false">VirGLRenderer (OpenGL 4.3)</string>
    <string name="game_setting_ui_pojav_renderer_gl4es_114" translatable="false">Holy GL4ES (OpenGL 2.1/3.2)</string>
    <string name="game_setting_ui_pojav_renderer_virgl" translatable="false">VirGLRenderer (OpenGL 4.3)</string>
    <string name="dialog_color_selector_arrow" translatable="false">→</string>
    <string name="download_setting_ui_source_bmclapi" translatable="false">BMCLAPI（bangbang93，https://bmclapi2.bangbang93.com/）</string>
    <string name="ui_about_hmclpe_main" translatable="false">Hello Minecraft! Launcher : Pocket Edition</string>
    <string name="ui_about_hmclpe_sub" translatable="false">1.0.0</string>
    <string name="ui_about_tungsten_main" translatable="false">Tungsten</string>
    <string name="ui_about_shirosakimio_main" translatable="false">ShirosakiMio</string>
    <string name="ui_about_cosine_main" translatable="false">CosineMath</string>
    <string name="ui_about_legacy_main" translatable="false">LegacyGamerHD</string>
    <string name="ui_about_tsaltedfishking_main" translatable="false">TSaltedfishKing</string>
    <string name="ui_about_bangbang93_main" translatable="false">bangbang93</string>
    <string name="ui_about_community_discord" translatable="false">Discord</string>
    <string name="ui_about_open_source_statement" translatable="false">GPL v3 (https://github.com/Tungstend/HMCL-PE-CN)</string>
    <string name="ui_about_libs_hmcl" translatable="false">HMCL</string>
    <string name="ui_about_libs_hmcl_sec" translatable="false">Copyright (c) 2022 huangyuhui.</string>
    <string name="ui_about_libs_hmcl_thi" translatable="false">Licensed under the GPL 3.</string>
    <string name="ui_about_libs_boat" translatable="false">Boat</string>
    <string name="ui_about_libs_boat_sec" translatable="false">Copyright (c) 2021 AOF-Dev.</string>
    <string name="ui_about_libs_boat_thi" translatable="false">Licensed under the GPL 2.</string>
    <string name="ui_about_libs_pojav" translatable="false">PojavLauncher</string>
    <string name="ui_about_libs_pojav_sec" translatable="false">Copyright (c) 2022 PojavLauncherTeam.</string>
    <string name="ui_about_libs_pojav_thi" translatable="false">Licensed under the GPL 3.</string>
    <string name="ui_about_libs_hin2n" translatable="false">Hin2n</string>
    <string name="ui_about_libs_hin2n_sec" translatable="false">Copyright (c) 2022 switch-iot.</string>
    <string name="ui_about_libs_hin2n_thi" translatable="false">Licensed under the GPL 3.</string>
    <string name="ui_about_libs_gson" translatable="false">Gson</string>
    <string name="ui_about_libs_gson_sec" translatable="false">Copyright 2008 Google Inc.</string>
    <string name="ui_about_libs_gson_thi" translatable="false">Licensed under the Apache 2.0 License.</string>
    <string name="ui_about_libs_theme" translatable="false">app-theme-engine</string>
    <string name="ui_about_libs_theme_sec" translatable="false">Copyright (c) 2016 naman14.</string>
    <string name="ui_about_libs_theme_thi" translatable="false">Licensed under the Apache 2.0 License.</string>
    <string name="ui_about_libs_okhttp" translatable="false">okhttp</string>
    <string name="ui_about_libs_okhttp_sec" translatable="false">Copyright (c) 2022 square.</string>
    <string name="ui_about_libs_okhttp_thi" translatable="false">Licensed under the Apache 2.0 License.</string>
    <string name="ui_about_libs_nano" translatable="false">nanohttpd</string>
    <string name="ui_about_libs_nano_sec" translatable="false">Copyright (c) 2016 NanoHttpd.</string>
    <string name="ui_about_libs_nano_thi" translatable="false">Licensed under the BSD-3 Clause License.</string>
    <string name="ui_about_libs_crash" translatable="false">CustomActivityOnCrash</string>
    <string name="ui_about_libs_crash_sec" translatable="false">Copyright (c) 2022 Ereza.</string>
    <string name="ui_about_libs_crash_thi" translatable="false">Licensed under the Apache 2.0 License.</string>
    <string name="ui_about_libs_commonc" translatable="false">commons-compress</string>
    <string name="ui_about_libs_commonc_sec" translatable="false">Copyright (c) 2022 apache.</string>
    <string name="ui_about_libs_commomc_thi" translatable="false">Licensed under the Apache 2.0 License.</string>
    <string name="ui_about_libs_commonl" translatable="false">commons-lang3</string>
    <string name="ui_about_libs_commonl_sec" translatable="false">Copyright (c) 2022 apache.</string>
    <string name="ui_about_libs_commonl_thi" translatable="false">Licensed under the Apache 2.0 License.</string>
    <string name="ui_about_libs_opennbt" translatable="false">OpenNBT</string>
    <string name="ui_about_libs_opennbt_sec" translatable="false">Copyright (c) 2013-2021 Steveice10.</string>
    <string name="ui_about_libs_opennbt_thi" translatable="false">Licensed under the MIT License.</string>
    <string name="ui_about_libs_color" translatable="false">ColorPicker</string>
    <string name="contributor_heo_bino" translatable="false">Heo_Bino</string>
    <string name="contributor_stefma" translatable="false">Stefma</string>
    <string name="contributor_matheus" translatable="false">MatheusTGP</string>
    <string name="dialog_verify_title">Development version test permission verification</string>
    <string name="dialog_verify_msg">Your device code is:\n%s\nPlease fill in the authorization verification code that matches this device code.</string>
    <string name="dialog_verify_code">Authorization verification code</string>
    <string name="dialog_verify_donate">Get permission</string>
    <string name="dialog_verify_copy">Copy device code</string>
    <string name="dialog_verify_verify">Verify</string>
    <string name="dialog_verify_cancel">Cancel</string>
    <string name="dialog_add_microsoft_account_title">Add a Microsoft account</string>
    <string name="dialog_add_microsoft_account_hint">Information</string>
    <string name="dialog_add_microsoft_account_hint_text">You will need to click the login button and complete the login in the newly opened browser window.</string>
    <string name="dialog_add_microsoft_account_purchase"><a href="https://www.minecraft.net/zh-hans/store/minecraft-java-edition">Buy Minecraft</a></string>
    <string name="dialog_add_microsoft_account_help"><a href="https://support.microsoft.com/zh-cn/account-billing/%E5%A6%82%E4%BD%95%E6%9B%B4%E6%94%B9-microsoft-%E5%B8%90%E6%88%B7%E4%B8%8A%E7%9A%84%E5%87%BA%E7%94%9F%E6%97%A5%E6%9C%9F-837badbc-999e-54d2-2617-d19206b9540a">How to Change Account Birth Date</a></string>
    <string name="dialog_add_microsoft_account_setting"><a href="https://account.live.com/editprof.aspx">Account Settings Page</a></string>
    <string name="dialog_add_microsoft_account_login">Login</string>
    <string name="dialog_add_microsoft_account_cancel">Cancel</string>
    <string name="browse_menu_game_dir">Game Directory</string>
    <string name="browse_menu_mod_dir">Reveal in Explorer</string>
    <string name="browse_menu_setting_dir">Configs</string>
    <string name="browse_menu_resource_dir">Resource packs</string>
    <string name="browse_menu_screenshots_dir">Screenshots</string>
    <string name="browse_menu_saves_dir">Saves</string>
    <string name="manage_menu_test_game">Test Launch</string>
    <string name="manage_menu_rename">Rename Instance</string>
    <string name="manage_menu_copy">Duplicate Instance</string>
    <string name="manage_menu_delete">Delete Instance</string>
    <string name="manage_menu_export">Export Modpack</string>
    <string name="manage_menu_update">Update Game Assets</string>
    <string name="manage_menu_delete_libs">Delete All Libraries</string>
    <string name="manage_menu_delete_logs">Delete Log Files</string>
    <string name="menu_local_version_test_game">Test Launch</string>
    <string name="menu_local_version_generate_launch_script">Export Launch Script</string>
    <string name="menu_local_version_game_manage">Manage Instances</string>
    <string name="menu_local_version_rename">Rename Instance</string>
    <string name="menu_local_version_copy">Duplicate Instance</string>
    <string name="menu_local_version_delete">Delete Instance</string>
    <string name="menu_local_version_export_pack">Export Modpack</string>
    <string name="menu_local_version_game_folder">Game Directory</string>
    <string name="dialog_contributor_list_title">Contributor list</string>
    <string name="dialog_create_community_title">Create Session</string>
    <string name="dialog_create_community_alert">Information</string>
    <string name="dialog_create_community_alert_text">Before creating a multiplayer session, you must click on "Open to LAN" first in the game\'s pause menu. Then enter the port number below.</string>
    <string name="dialog_create_community_name">Name</string>
    <string name="dialog_create_community_port">Port</string>
    <string name="dialog_create_community_getting">checking…</string>
    <string name="dialog_create_community_error">Unable to detect the game port, you must click on "Open to Lan" in the game\'s pause menu to allow others to join your world.</string>
    <string name="dialog_create_community_positive">OK</string>
    <string name="dialog_create_community_negative">Cancel</string>
</resources>