<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp"
    android:layout_width="500dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_big"
        android:textColor="@color/colorPureBlack"
        android:text="@string/dialog_verify_title"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_middle"
        android:textColor="@color/colorPureBlack"
        android:text="@string/dialog_verify_msg"
        android:id="@+id/oaid_text"/>

    <EditText
        android:hint="@string/dialog_verify_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_verify_code"
        android:textSize="@dimen/text_size_middle"
        android:textColor="@color/colorPureBlack"
        android:singleLine="true"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:minWidth="0dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/dialog_verify_donate"
            android:textSize="15sp"
            android:textColor="@color/colorLinkBlue"
            android:background="@drawable/launcher_button_parent"
            android:id="@+id/obtain_permission"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:minWidth="0dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/dialog_verify_copy"
            android:textSize="15sp"
            android:textColor="@color/colorLinkBlue"
            android:background="@drawable/launcher_button_parent"
            android:id="@+id/copy_oaid"/>

        <Button
            android:minWidth="0dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/dialog_verify_verify"
            android:textSize="15sp"
            android:textColor="@color/colorLinkBlue"
            android:background="@drawable/launcher_button_parent"
            android:id="@+id/verify"/>

        <Button
            android:minWidth="0dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/dialog_verify_cancel"
            android:textSize="15sp"
            android:textColor="@color/colorLinkBlue"
            android:background="@drawable/launcher_button_parent"
            android:id="@+id/cancel"/>

    </LinearLayout>

</LinearLayout>