<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dialog_contributor_list_title"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/colorPureBlack"/>

    <ScrollView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_middle"
                android:textColor="@color/colorPureBlack"
                android:text="@string/contributor_heo_bino"/>

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_middle"
                android:textColor="@color/colorPureBlack"
                android:text="@string/contributor_stefma"/>

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_middle"
                android:textColor="@color/colorPureBlack"
                android:text="@string/contributor_matheus"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>