<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:layout_width="500dp"
    android:layout_height="match_parent">

    <ProgressBar
        android:tag="tint_accent_color"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_indeterminate"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:id="@+id/progress"/>

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:singleLine="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_create_community_title"
            android:textColor="@color/colorPureBlack"
            android:textSize="@dimen/text_size_big"/>

        <LinearLayout
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/launcher_view_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_outline_about_black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:text="@string/dialog_create_community_alert"
                    android:textSize="@dimen/text_size_middle"
                    android:textColor="@color/colorLinkBlueDark"/>

            </LinearLayout>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_create_community_alert_text"
                android:textSize="@dimen/text_size_middle"
                android:textColor="@color/colorLinkBlueDark"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_middle"
                android:textColor="@color/colorPureBlack"
                android:text="@string/dialog_create_community_name"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:singleLine="true"
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_middle"
                android:textColor="@color/colorPureBlack"
                android:text="@string/dialog_create_community_getting"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_middle"
                android:textColor="@color/colorPureBlack"
                android:text="@string/dialog_create_community_port"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:singleLine="true"
                android:id="@+id/port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_middle"
                android:textColor="@color/colorPureBlack"
                android:text="@string/dialog_create_community_getting"/>

        </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/dialog_create_community_error"
            android:textSize="@dimen/text_size_middle"
            android:textColor="@color/colorPureBlack"
            android:id="@+id/error"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:singleLine="true"
                android:textAllCaps="false"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/dialog_create_community_positive"
                android:textSize="15sp"
                android:textColor="@color/colorLinkBlue"
                android:background="@drawable/launcher_button_parent"
                android:id="@+id/create"/>

            <Button
                android:singleLine="true"
                android:textAllCaps="false"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/dialog_create_community_negative"
                android:textSize="15sp"
                android:textColor="@color/colorPureBlack"
                android:background="@drawable/launcher_button_parent"
                android:id="@+id/exit"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>